--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.5",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   },
   "name": "group-project-2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "seeds": "node seeds/index.js",
     "start": "node server.js"
